; ModuleID = '/home/carl/AnghaBench/vlc/modules/video_output/wayland/extr_registry.c_vlc_wl_interface_find.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/video_output/wayland/extr_registry.c_vlc_wl_interface_find.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_wl_interface = type opaque
%struct.vlc_wl_registry = type { i32 }

@vwimatch = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.vlc_wl_interface* (%struct.vlc_wl_registry*, i8*)* @vlc_wl_interface_find to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.vlc_wl_interface* @vlc_wl_interface_find(%struct.vlc_wl_registry* %0, i8* %1) #0 {
  %3 = alloca %struct.vlc_wl_registry*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8**, align 8
  store %struct.vlc_wl_registry* %0, %struct.vlc_wl_registry** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = load %struct.vlc_wl_registry*, %struct.vlc_wl_registry** %3, align 8
  %8 = getelementptr inbounds %struct.vlc_wl_registry, %struct.vlc_wl_registry* %7, i32 0, i32 0
  %9 = load i32, i32* @vwimatch, align 4
  %10 = call i8** @tfind(i8* %6, i32* %8, i32 %9)
  store i8** %10, i8*** %5, align 8
  %11 = load i8**, i8*** %5, align 8
  %12 = icmp ne i8** %11, null
  br i1 %12, label %13, label %16

13:                                               ; preds = %2
  %14 = load i8**, i8*** %5, align 8
  %15 = load i8*, i8** %14, align 8
  br label %17

16:                                               ; preds = %2
  br label %17

17:                                               ; preds = %16, %13
  %18 = phi i8* [ %15, %13 ], [ null, %16 ]
  %19 = bitcast i8* %18 to %struct.vlc_wl_interface*
  ret %struct.vlc_wl_interface* %19
}

declare dso_local i8** @tfind(i8*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
